fix old posts document layout

--- a/_posts/2020-08-07-杭电多校第六场-I.md
+++ b/_posts/2020-08-07-杭电多校第六场-I.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "(旧存档) 杭电多校第六场-I"
+title:  "(旧存档) 杭电多校第六场-I题"
 date:   2020-08-07 20:38:00 +0800
 categories: jekyll update
 ---
@@ -8,33 +8,31 @@ categories: jekyll update
 
 ### 题意
 
-给你一个 $b$ 和 $x$，问你什么时候：$∀ y, x | sum(y) \rightarrow x | y $，其中 $sum(y) $ 代表 $b$ 进展下的数位和。
+给你一个 $b$ 和 $x$，问你什么时候：$\forall y, x$ \| $sum(y) \rightarrow x$ \| $y$，其中 $sum(y)$ 代表 $b$ 进展下的数位和。
 
 ### 思路
 
-对于 $∀ y = (c_1c_2...c_n)_b $, 那么有：
+对于 $∀ y = (c_1c_2...c_n)_b$, 那么有：
 
-$x | \sum c_i \rightarrow x | \sum b^ic_i$
+$x$ \| $\sum c_i \rightarrow x$ \| $\sum b^ic_i$
 
-我们在右方凑出 $ \sum c_i $，那么有：
+我们在右方凑出 $\sum c_i$，那么有：
 
-$x|\sum c_i \rightarrow x | (\sum(b^i-1)c_i + \sum c_i)$
+$x$ \| $\sum c_i \rightarrow x$ \| $(\sum(b^i-1)c_i + \sum c_i)$
 
 只需:
 
-$x | \sum(b^i-1)c_i$
+$x$ \| $\sum(b^i-1)c_i$
 
 即只需:
 
-$x | (b^i-1) \leftrightarrow x | (b-1)(b^{i-1}+...+b^1+1)$
+$x$ \| $(b^i-1) \leftrightarrow x$ \| $(b-1)(b^{i-1}+...+b^1+1)$
 
 因此，只需:
 
-$x | (b-1)$
+$x$ \| $(b-1)$
 
 ### 代码
-
----
 
 ```c++
 #include <bits/stdc++.h>
