--- a/_posts/2020-08-07-杭电多校第六场-J.md
+++ b/_posts/2020-08-07-杭电多校第六场-J.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "(旧存档) 杭电多校第六场-J"
+title:  "(旧存档) 杭电多校第六场-J题"
 date:   2020-08-07 23:38:00 +0800
 categories: jekyll update
 ---
