--- a/_posts/2020-08-08-杭电多校第六场-A.md
+++ b/_posts/2020-08-08-杭电多校第六场-A.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "(旧存档) 杭电多校第六场-A"
+title:  "(旧存档) 杭电多校第六场-A题"
 date:   2020-08-08 10:53:00 +0800
 categories: jekyll update
 ---
