--- a/_posts/2020-07-30-杭电多校第二场-A.md
+++ b/_posts/2020-07-30-杭电多校第二场-A.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "(旧存档) 杭电多校第二场-A"
+title:  "(旧存档) 杭电多校第二场-A题"
 date:   2020-07-30 16:46:34 +0800
 categories: jekyll update
 ---
@@ -8,32 +8,28 @@ categories: jekyll update
 
 ### 题意
 
----
 给你一个图，上面有点值，你可以选一个联通子图，将上面点的点值减一。问至少要操作多少次，才能使整个图的点值为 0
 
 ### 思路
 
----
 刚开始肯定是想一些很暴力的手段，假设 G 是一个连通图。
 
-1. 每次找到 G 的最小点权 v.weight，对应的点为 v，答案贡献 ans += v.weight
-2. G = G - v，G 每个点的点权减 v.weight
-3. G 为空，算法结束，否则执行1
+1. 每次找到 $G$ 的最小点权 $v.weight$，对应的点为 $v$，答案贡献 $ans += v.weight$
+2. $G = G - v$，$G$ 每个点的点权减 $v.weight$
+3. $G$ 为空，算法结束，否则执行 `1.`
 
-这个方法太暴力了，看上去很不可做。(分裂法)
+这个方法太暴力了，看上去很不可做。
 
 那么我们不妨把上面的过程倒过来：
 
-1. G' 为空，原图为 G
-2. 从 G 中选一个最大点权 v.weight，对应的点为 v，G = G - v， G' = G' + v
-3. 记 G' 中的最小点权为 u.weight，对应的点为u, ans += v.weight - u.weight，表示使 G' 内的点权一样，至少执行多少次减法
-4. 若 G 为空，算法结束，否则执行2
+1. $G'$ 为空，原图为 $G$
+2. 从 $G$ 中选一个最大点权 $v.weight$，对应的点为 $v$，$G = G - v$，$G' = G' + v$
+3. 记 $G'$ 中的最小点权为 $u.weight$，对应的点为 $u$ , $ans += v.weight - u.weight$，表示使 $G'$ 内的点权一样，至少执行多少次减法
+4. 若 $G$ 为空，算法结束，否则执行 `2.`
 
-最后我们将 G' 的点权清零 ans += min(G)
+最后我们将 $G'$ 的点权清零 $ans += min(G)$
 
 ### 代码
-
----
 
 ```c++
 #include <bits/stdc++.h>
