--- a/_posts/2020-08-02-杭电多校第三场-D.md
+++ b/_posts/2020-08-02-杭电多校第三场-D.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "(旧存档) 杭电多校第三场-D"
+title:  "(旧存档) 杭电多校第三场-D题"
 date:   2020-08-02 20:21:00 +0800
 categories: jekyll update
 ---
