--- a/_posts/2020-08-02-杭电多校第三场-I.md
+++ b/_posts/2020-08-02-杭电多校第三场-I.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "(旧存档) 杭电多校第三场-I"
+title:  "(旧存档) 杭电多校第三场-I题"
 date:   2020-08-02 21:46:00 +0800
 categories: jekyll update
 ---
@@ -8,12 +8,10 @@ categories: jekyll update
 
 ### 题意  
 
----
 给你一个串，其中 \* 代表可以填充的地方。题目要求你填充 \* 部分，使得这个串“括号匹配”，并且填充次数最小，其括号部分字典序最小。
 
 ### 思路
 
----
 一开始就想到贪心，但是细节想了很久。
 
 其实最关键是发现一个性质，如果在子串 $s[1:i]$，左右括号数目不等。
@@ -27,8 +25,6 @@ categories: jekyll update
 写一个双端队列，扫描过程中同时维护队列中 \* 的位置即可。
 
 ### 代码  
-
----
 
 ```c++
 #include <bits/stdc++.h>
