change filenames of posts

--- a/_posts/2020-08-02-杭电多校第三场-I题.md
+++ b/_posts/2020-08-02-杭电多校第三场-I题.md
@@ -8,7 +8,7 @@ categories: jekyll update
 
 ### 题意  
 
-给你一个串，其中 \* 代表可以填充的地方。题目要求你填充 \* 部分，使得这个串“括号匹配”，并且填充次数最小，其括号部分字典序最小。
+给你一个串，其中 *\** 代表可以填充的地方。题目要求你填充 *\** 部分，使得这个串“括号匹配”，并且填充次数最小，其括号部分字典序最小。
 
 ### 思路
 
@@ -16,13 +16,13 @@ categories: jekyll update
 
 其实最关键是发现一个性质，如果在子串 $s[1:i]$，左右括号数目不等。
 
-1. 左括号有不匹配：找到离它右侧最远的 \*, 替换成右括号即可
-2. 右括号有不匹配：找到离它左侧最远的 \*, 替换成左括号即可
-3. 如果上面任一环节找不到对应的 \*, 必然匹配失败
+1. 左括号有不匹配：找到离它右侧最远的 *\**, 替换成右括号即可
+2. 右括号有不匹配：找到离它左侧最远的 *\**, 替换成左括号即可
+3. 如果上面任一环节找不到对应的 *\**, 必然匹配失败
 
 而且这个方法恰好能使填充次数最小，并且保证字典序最小。
 
-写一个双端队列，扫描过程中同时维护队列中 \* 的位置即可。
+写一个双端队列，扫描过程中同时维护队列中 *\** 的位置即可。
 
 ### 代码  
 
