add 2020 Nowcoder Collegiate Programming Contest (Round 2)

--- a/_posts/2020-07-30-牛客多校第一场-F题.md
+++ b/_posts/2020-07-30-牛客多校第一场-F题.md
@@ -12,7 +12,7 @@ categories: jekyll update
 
 ### 思路
 
-根据 `Periodicity Lemma` 可知，若在$|S|+|T|-gcd(|S|, |T|)$范围内没有适配，那么$s^{\infty}$和$t^{\infty}$相等，否则按照字典序关系比较。
+根据 `Periodicity Lemma` 可知，若在$\|S\|+\|T\|-gcd(\|S\|, \|T\|)$范围内没有适配，那么$s^{\infty}$和$t^{\infty}$相等，否则按照字典序关系比较。
 
 ### 代码
 
