update timestamp of 2020 Nowcoder Collegiate Programming Contest (Round 1)

--- a/_posts/2020-07-30-牛客多校第八场-E题.md
+++ b/_posts/2020-07-30-牛客多校第八场-E题.md
@@ -10,12 +10,10 @@ categories: jekyll update
 
 设 $f(n) $ 为满足 $ px + q(x + 1) + r(x + 2) = n$ 的方案数，其中要求：
 
-1. $1、p, q, r, x 为整数$
-2. $2、1 \le p, q, r, x \le N$
+1. $p, q, r, x 为整数$
+2. $1 \le p, q, r, x \le N$
 
-有 $T$ 次询问 $(1\le T \le 10^4)$，每次询问给出一个 $L, R$, 保证 $(1\le L \le R \le N \le 10^5)$，请求出：
-
-$ans = \sum \limits_{i=L}^{R} f(i)$
+有 $T$ 次询问 $(1\le T \le 10^4)$，每次询问给出一个 $L, R$, 保证 $(1\le L \le R \le N \le 10^5)$，请求出：$ans = \sum \limits_{i=L}^{R} f(i)$
 
 ### 思路
 
