fix a  post layout

--- a/_posts/2019-09-15-2019年上海ICPC网络赛总结.md
+++ b/_posts/2019-09-15-2019年上海ICPC网络赛总结.md
@@ -101,13 +101,13 @@ int main() {
 
 ## D. Counting Sequences I
 
-**题意：** 有一个数组 $a_{n}$ $(n\ge2)$ ，下标从 $1$ 开始， 问你满足：$a_{1}+a_{2}+ ...+a_{n} = a_{1}*a_{2}*...*a_{n}$ 的数组 $a_{n}$ 的个数。
+**题意：** 有一个数组 $a_{n}$ $(n\ge2)$ ，下标从 $1$ 开始， 问你满足：$a_1+a_2+ ...+a_n = a_1 \times a_2 \times ... \times a_n$ 的数组 $a_n$ 的个数。
 
 **范围：** 有多组数据 $T$ 。$1\le T \le 300 ,1 \le n \le 3000$
 
 **限制：** 时限：$1000ms$，内存：$8192K$
 
-**解法一：** 离线打表即可 (这个表，还是不是很好打滴），如果先不选择 $1$, 考虑选中了其他 $x$ 个数， 其乘积为 $mul$ , 和为 $sum$ ， 那么添加 $mul - sum$ 个 $1$ 后，有 $a_{1}+a_{2}+ ...+a_{n} = a_{1}*a_{2}*...*a_{n}$ 。那么考虑搜索的算法，当 $mul - sum$ 已经大于可以使用的 $1$ 的数量时剪枝。（可行性剪枝）
+**解法一：** 离线打表即可 (这个表，还是不是很好打滴），如果先不选择 $1$, 考虑选中了其他 $x$ 个数， 其乘积为 $mul$ , 和为 $sum$ ， 那么添加 $mul - sum$ 个 $1$ 后，有 $a_1+a_2+ ...+a_n = a_1  \times a_2  \times ... \times a_n$ 。那么考虑搜索的算法，当 $mul - sum$ 已经大于可以使用的 $1$ 的数量时剪枝。（可行性剪枝）
 
 **打表代码：**（数据生成用时 13s)
 
@@ -325,7 +325,7 @@ int main() {
 
 ## J. Stone game
 
-**题意：** 有一个多重数集S, 将S划分为两部分 $S_{1}, S_{2}$ 并且 $Sum(S_{1}) \ge Sum(S_{2})andSum(S_{1})-Min(S_{1})\le Sum(S_{2})$, 求划分数的个数。
+**题意：** 有一个多重数集S, 将S划分为两部分 $S_{1}, S_{2}$ 并且 $Sum(S_{1}) \ge Sum(S_{2})$ && $Sum(S_{1})-Min(S_{1})\le Sum(S_{2})$, 求划分数的个数。
 
 **范围：** 有多组数据 $T$ 。$1\le T \le 10 ,1 \le n \le 300,1\le a_{i} \le 500$
 
