fix bugs in the latest blog post

--- a/_posts/2022-05-16-Leetcode第78场双周赛题解.md
+++ b/_posts/2022-05-16-Leetcode第78场双周赛题解.md
@@ -139,4 +139,4 @@ public:
 };
 ```
 
-上面的 $dp[i][0]$ 代表不包含字符 $y$ 时, 以 $i$ 结尾后缀中, 字符 $x$ 的 `最大贡献`，$dp[i][1]$ 包含字符 $y$ 时, 以 $i$ 结尾后缀中, 字符 $x$ 和 字符 $y$ 的 `最大贡献`。那么 $dp[n][1]$ 就是子字符串的 `最大波动`。
+上面的 $dp[i][0]$ 代表不包含字符 $y$ 时, 以 $i$ 结尾后缀中, 字符 $x$ 的 `最大贡献`，$dp[i][1]$ 包含字符 $y$ 时, 以 $i$ 结尾后缀中, 字符 $x$ 和 字符 $y$ 的 `最大贡献`。那么 $\max_i dp[i][1]$ 就是子字符串的 `最大波动`。
