add leetcode weekly contest 292

--- a/_posts/2022-05-18-Leetcode第293场周赛题解.md
+++ b/_posts/2022-05-18-Leetcode第293场周赛题解.md
@@ -5,7 +5,7 @@ date:   2022-05-18 13:38:34 +0800
 categories: jekyll update
 ---
 
-## Leetcode 第 293 场双周赛 题解
+## Leetcode 第 293 场周赛 题解
 
 ### [1. 移除字母异位词后的结果数组](https://leetcode.cn/problems/find-resultant-array-after-removing-anagrams/)
 
