revise leetcode weekly contest 291

--- a/_posts/2022-05-22-Leetcode第291场周赛题解.md
+++ b/_posts/2022-05-22-Leetcode第291场周赛题解.md
@@ -52,7 +52,7 @@ public:
 
 ### [3. 含最多 K 个可整除元素的子数组](https://leetcode.cn/problems/k-divisible-elements-subarrays/)
 
-看了下数据范围，我直接暴力枚举，草草了事。最多加个前缀和加速一下。
+看了下数据范围，我直接暴力枚举，草草了事。最多加个前缀和加速一下。时间复杂度 $O(n^3logn)$，跑了 1400 ms。
 
 ```c++
 class Solution {
@@ -81,7 +81,97 @@ public:
 };
 ```
 
-赛后看了一下，其实有更优的 $O(n^2)$ 和 $O(n)$ 的算法。而且赛场上写的这个 $O(n^3)$ 常数很大，这里先 `插个眼`，后续写优化的方法。
+由于 `std::vector` 不支持 `std::unordered_set`，其实加个 `std::hash` 支持就可以把时间复杂度降到 $O(n^3)$ 了，跑了 500 ms。
+
+```c++
+template<>
+struct std::hash<std::vector<int>> {
+    size_t operator () (const std::vector<int>& x) const noexcept {
+        return accumulate(x.begin(), x.end(), 0);
+    }
+};
+```
+
+最后可以通过手写一个 `slice` 类型，通过预计算哈希值，从而把时间和空间复杂度降到 $O(n^2)$。运行时间 176 ms。
+
+```c++
+struct Slice {
+    int *left = nullptr;
+    int *right = nullptr;
+    size_t hashCode = 0;
+
+    bool operator == (const Slice& s) const noexcept {
+        if (hashCode != s.hashCode) return false;
+        if (right - left != s.right - s.left) return false;
+        return equal(left, right, s.left, s.right);
+    }
+};
+
+template<>
+struct std::hash<Slice> {
+    size_t operator () (const Slice& s) const noexcept {
+        return s.hashCode;
+    }
+};
+
+class Solution {
+public:
+    int countDistinct(vector<int>& nums, int k, int p) {
+        int n = nums.size();
+        unordered_set<Slice> ans;
+
+        for (int i = 1; i <= n; ++i) {
+            size_t hashCode = 0;
+            int count = 0;
+            for (int j = i; j <= n; ++j) {
+                hashCode = hashCode * 57 + nums[j - 1];
+                count += (nums[j - 1] % p == 0);
+                if (count <= k) {
+                    Slice s;
+                    s.left = nums.data() + i - 1;
+                    s.right = nums.data() + j;
+                    s.hashCode = hashCode;
+                    ans.emplace(s);
+                } else {
+                    break;
+                }
+            }
+        }
+        return ans.size();
+    }
+};
+```
+
+最后，可以试试玄学 `双哈希`，速度飞快，时间复杂度 $O(n^2)$，运行时间 116ms。
+
+```c++
+using ll = long long;
+class Solution {
+public:
+    int countDistinct(vector<int>& nums, int k, int p) {
+        int n = nums.size();
+        
+        unordered_set<ll> ans;
+        ans.reserve(n * n);
+        
+        for (int i = 1; i <= n; ++i) {
+            unsigned hashCode[2] = {};
+            int count = 0;
+            for (int j = i; j <= n; ++j) {
+                hashCode[0] = hashCode[0] * 57 + nums[j - 1];
+                hashCode[1] = hashCode[1] * 31 + nums[j - 1];
+                count += (nums[j - 1] % p == 0);
+                if (count <= k) {
+                    ans.emplace(*reinterpret_cast<ll *>(hashCode));
+                } else {
+                    break;
+                }
+            }
+        }
+        return ans.size();
+    }
+};
+```
 
 ### [4. 字符串的总引力](https://leetcode.cn/problems/total-appeal-of-a-string/)
 
@@ -89,7 +179,7 @@ public:
 
 **赛场的解法**: 枚举 `引力`，找 `引力` 为 $x$ 的子字符串的个数 $count(x)$，答案就是 $\sum x \times count(x)$。
 
-那么怎么求 $count(x)$ 呢： 可以通过*两个滑动窗口*来解决，分别表示以 $s[i]$ 结尾的子串， `引力` 为 $x$ 的最大窗口和最小窗口，过程中统计两个窗口大小的差值 $delta$，并累加答案 $ans = ans + delta *x$。时间复杂度 $O(26* n)$。
+那么怎么求 $count(x)$ 呢： 可以通过 *两个滑动窗口* 来解决，分别表示以 $s[i]$ 结尾的子串， `引力` 为 $x$ 的最大窗口和最小窗口，过程中统计两个窗口大小的差值 $delta$，并累加答案 $ans = ans + delta \times x$。时间复杂度 $O(26* n)$。
 
 ```c++
 using ll = long long;
@@ -131,4 +221,34 @@ public:
 };
 ```
 
-**正确解法**: `插眼`，太晚了，后续写正解。
+**正确解法**: 设字符串 $x$ 的 `引力`  为 $f(x)$。由于子串 $s[:i]$ 总是由 $s[:i-1] + s[i]$ 构成，不妨考虑加入 $s[i]$ 后，总引力如何发生改变。
+
+- 假如 `s[i]` 从来没有在前面的子串出现过，那么对 $0 \le j \lt i$，都有 $f(s[j:i])=f(s[j:i-1]) + 1$。
+- 假如 `s[i]` 最近在 $k$ 出现过，那么对 $0 \le j \le k$，都有 $f(s[j:i])=f(s[j:i-1])$，对 $k \lt j \lt i$，都有 $f(s[j:i])=f(s[j:i-1]) + 1$。
+
+以上都是显然的，只要大家在纸上写写过程，很快都能推导出来。根据以上结论，我们设 $dp(i)$ 为以 `s[i]` 结尾的子串的引力和，那么有：
+
+- 假如 `s[i]` 从来没有在前面的子串出现过，那么 $dp(i) = dp(i-1) + i$
+- 假如 `s[i]` 最近在 $k$ 出现过，那么 $dp(i) = dp(i-1) + (i - k)$
+
+只需要记录最近出现的 `s[i]`，然后 `DP` 即可，时间复杂度 $O(n)$。
+
+```c++
+class Solution {
+public:
+    long long appealSum(string s) {
+        int n = s.length();
+        auto last = vector<int>(128);
+        auto dp = vector<long long>(n + 1);
+
+        long long ans = 0;
+        for (int i = 1; i <= n; ++i) {
+            dp[i] = dp[i - 1] + (i - last[s[i - 1]]);
+            last[s[i - 1]] = i;
+            ans += dp[i];
+        }
+
+        return ans;
+    }
+};
+```
