revise `A better view to solve a problem`

--- a/_posts/2022-05-25-一道题引起的反思.md
+++ b/_posts/2022-05-25-一道题引起的反思.md
@@ -9,7 +9,9 @@ categories: jekyll update
 
 ### 引言
 
-今天中午做一道 `Leetcode Mid` 级别的题目，一看到题之后就有想法，但是后来沿着错误的想法想了非常久。其实问题本身很简单，如果知道正确思路，大概 3 分钟不到能做出来。由于做题的过程中，想起一些生活的经历和做事方法，特地来反思一下做题或者平时生活解决问题时，需要注意的一些事情。
+今天中午做一道 `Leetcode Mid` 级别的题目，一看到题之后就有想法，但是后来沿着错误的想法想了非常久。其实问题本身很简单，如果知道正确思路，大概 3 分钟不到能做出来。
+
+由于做题的过程中，想起一些生活的经历和做事方法，特地来反思一下做题或者平时生活解决问题时，需要注意的一些事情。
 
 ### [467. 环绕字符串中唯一的子字符串](https://leetcode.cn/problems/unique-substrings-in-wraparound-string/)
 
